--- a/src/components/Display.css
+++ b/src/components/Display.css
@@ -13,6 +13,7 @@
   }
   .center {
     margin: 25px;
+    margin-top: "10px";
   }
   
   .button {
@@ -26,7 +27,22 @@
     font-size: 16px;
     border-radius: 5px;
     margin-right: 10px;
+    margin-top: -10px;
     padding-bottom: 10px;
+  }
+  .ynn{
+    background-color: initial;
+    cursor: pointer;
+    background-image: linear-gradient(-180deg, #009ffd, #2a2a72);
+    border-radius: 6px;
+    color: #ffffff;
+    padding: 5px 10px;
+    border: none;
+    font-size: 16px;
+    border-radius: 5px;
+    margin-right: 10px;
+    margin-top: 28px;
+    height:44px;
   }
   .button:hover {
     box-shadow: rgba(253, 76, 0, 0.5) 0 3px 8px;
@@ -34,10 +50,11 @@
   .address {
     display: block;
     margin: auto;
-    height: 30px;
+    height: 50px;
     width: 350px;
     text-align: center;
     margin-top: 10px;
+    border-radius: 10px;
   }
   
   input[type="text"]:focus {
