--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -59,35 +59,28 @@
       text-align: center;
     }
     
-    .modalContainer .footer {
-      flex: 20%;
-      display: flex;
-  
-      justify-content: center;
-      align-items: center;
-     
-    }
+    
     
     .modalContainer .footer button {
       width: 100%;
-      height: 35px;
+      height: 40px;
     
       border: none;
       background-color: cornflowerblue;
       color: white;
-      border-radius: 8px;
+      border-radius: 4px;
       font-size: 20px;
       margin-bottom: 20px;
       cursor: pointer;
-      font-weight: bold;
+     
     }
     
    
     .address{
       display: block;
-      height: 45px;
+      height: 43px;
      
-    
+       font-size: 17px;
       text-align: center;
   }
   
